ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: grafana.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 8080
  - host: alertmanager.mini-plab.com
    http: 
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
